cmake_minimum_required (VERSION 3.8...3.31)

# Recurse into subdirectory for simple test.
add_subdirectory (secure-hashing-examples)

# Recurse into subdirectory for additional test.
add_subdirectory (additional-file)

# Recurse into subdirectory for additional buffer source test.
add_subdirectory (additional-buffer)
